[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.8"
show_error_codes = true
warn_unreachable = true

# Strict checks
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pycln]
all = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = doc,py36,py37,py38,py39,coverage
skipsdist=true

[testenv]
whitelist_externals = poetry
commands =
    pip install --editable . pytest pytest-httpserver
    pytest {posargs}

[testenv:doc]
commands =
    pip install --editable .
    pip install --requirement doc/requirements.txt
    sphinx-build doc build/sphinx/html

[testenv:coverage]
commands =
    pip install --editable . pytest pytest-httpserver coverage
    coverage run -m pytest {posargs}
    coverage html
"""
