[build-system]
requires = ["setuptools>=42", "wheel"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "B904",   # bugbear (Within an except clause, raise exceptions with raise ... from err)
  "B905",   # bugbear (zip() without an explicit strict= parameter set.)
#  "C9",     # mccabe complexity
  "E",      # pycodestyles
  "W",      # pycodestyles
  "F",      # pyflakes
  "I",      # isort
  "PLC",    # pylint conventions
  "PLE",    # pylint errors
  "UP",     # pyupgrade
]
ignore = ["E402", "E501", "E731", "E741"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unreachable = true

# Strict checks
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = doc,py36,py37,py38,py39,coverage
skipsdist=true

[testenv]
whitelist_externals = poetry
commands =
    pip install --editable . pytest pytest-httpserver
    pytest {posargs}

[testenv:doc]
commands =
    pip install --editable .
    pip install --requirement doc/requirements.txt
    sphinx-build doc build/sphinx/html

[testenv:coverage]
commands =
    pip install --editable . pytest pytest-httpserver coverage
    coverage run -m pytest {posargs}
    coverage html
"""
